<resources>
    <string name="app_name">Weather</string>
    <string name="app_city">City:</string>
    <string name="app_city_name">Moscow</string>
    <string name="app_temp">Temperature:</string>
    <string name="app_wind_speed">wind speed</string>
    <string name="app_pressure">pressure</string>
    <string name="app_btn_get_weather">get weather</string>

    <string name="app_city_Moscow">Moscow</string>
    <string name="app_city_London">London</string>
    <string name="app_city_Berlin">Berlin</string>
    <string name="app_city_Paris">Paris</string>
    <string name="app_city_Stockholm">Stockholm</string>

    <string name="app_btn_select_city">select sity</string>
    <string name="select_city_search">city search</string>
    <string name="select_city_btn_clear">Clear history</string>

    <!-- Navigation Drawer -->
    <string name="nav_header_title">Vladimir Svishch</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_menu_list_cities">List of cities</string>
    <string name="nav_menu_search_history">History</string>
    <string name="nav_menu_auth_in">Sign in</string>
    <string name="nav_menu_auth_out">Sign out</string>

    <!-- AlertDialog -->
    <string name="alert_dialog_title">Important message!</string>
    <string name="alert_dialog_message">Failed to get data from server!</string>
    <string name="alert_dialog_button">OK</string>

    <!-- BroadcastReceiver -->
    <string name="broadcast_connect_on">Network ON</string>
    <string name="broadcast_connect_off">Network OFF</string>
    <string name="broadcast_battery_low">BATTERY LOW</string>

    <!-- AlertWeather -->
    <string name="alert_weather_max_hour_rain">Downpour</string>
    <string name="alert_weather_max_speed_wind">Strong wind</string>

    <string-array name="cities">
        <item>Moscow</item>
        <item>St. Petersburg</item>
        <item>Novosibirsk</item>
        <item>Yekaterinburg</item>
        <item>Kazan</item>
        <item>Omsk</item>
        <item>Nizhniy Novgorod</item>
        <item>Rostov-na-Donu</item>
    </string-array>


</resources>