<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list_cities"
            android:icon="@drawable/ic_btn_ok"
            android:title="@string/nav_menu_list_cities" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_btn_ok"
            android:title="@string/nav_menu_search_history" />

    </group>
    <item android:title="Authorization">
        <menu>
            <item
                android:id="@+id/nav_auth_in"
                android:icon="@drawable/ic_nav_auth"
                android:title="@string/nav_menu_auth_in"
                android:visible="true" />
            <item
                android:id="@+id/nav_auth_out"
                android:icon="@drawable/ic_nav_auth"
                android:title="@string/nav_menu_auth_out"
                android:visible="false" />
        </menu>
    </item>


</menu>
