<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="413dp"
        android:layout_height="734dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@mipmap/weather01" />

    <LinearLayout
        android:layout_width="339dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:text="@string/app_city"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/main_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_city_name"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="339dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:text="@string/app_temp"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/text_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_btn_select_city"
        android:theme="@style/FormButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>